Adicionando fontes personalizadas e organizando Home

--- a/MarvelApp/ios/Podfile
+++ b/MarvelApp/ios/Podfile
@@ -8,6 +8,8 @@ target 'MarvelApp' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'MarvelAppTests' do
     inherit! :complete
     # Pods for testing
